--- a/packages/mb-frontend/src/components/ContentPerBimonthly/ContentPerBimonthly.css
+++ b/packages/mb-frontend/src/components/ContentPerBimonthly/ContentPerBimonthly.css
@@ -11,6 +11,7 @@
   }
   
   .modal-title {
+    height: 65px;
     color: #FFF;
     font-family: 'Montserrat';
     font-size: 32px;
@@ -18,16 +19,3 @@
     font-weight: 500;
     line-height: 18px;
   }
-  
-  .disciplina-text {
-    position: absolute;
-    margin-left: 53px;
-    margin-top: 79px;
-    color: #FFF;
-    font-family: 'Montserrat';
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 18px;
-  }
-  
