--- a/packages/mb-frontend/src/components/Modal/Modal.css
+++ b/packages/mb-frontend/src/components/Modal/Modal.css
@@ -31,19 +31,14 @@
     display: flex;
     flex-direction: column;
     padding-left: 53px;
-    /* Outras regras de estilo necessárias */
   }
   
   .modal__input-and-button-container {
     display: flex;
     justify-content: space-between;
-    /* Ou use 'justify-content: space-around;' para espaço uniforme em torno dos elementos */
-    /* Ou use 'justify-content: space-evenly;' para espaço uniforme ao redor dos elementos com espaço adicional no início e no final */
-    align-items: center; /* Isso centraliza os elementos verticalmente */
-    /* Outras regras de estilo necessárias */
+    align-items: center;
   }
   .modal__input {
-    /* Adicione estilos conforme necessário para o Input */
     color: var(--Texto-secundria, #6D6D6D);
     font-family: 'Montserrat';
     font-size: 14px;
@@ -71,7 +66,6 @@
     display: inline-block;
   }
   
-  /* button__close.css */
   .modal__close {
     position: absolute;
     top: 25px;
